# DECON

./: .gitignore  README.md  config.example.toml  pyproject.toml
src/decon/: cli.py  config.py  engine.py  llm.py  output.py  patterns.py
tests/: conftest.py  test_cli.py  test_config.py  test_engine.py  test_new_features.py  test_output.py  test_patterns.py  test_realistic.py
