[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "decon"
version = "0.1.0"
description = "Sanitize operational data before sharing. Consistent placeholders preserve analytical value."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = []

[project.scripts]
decon = "decon.cli:main"

[project.urls]
Homepage = "https://github.com/BLTSEC/decon"
Repository = "https://github.com/BLTSEC/decon"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.hatch.build.targets.wheel]
packages = ["src/decon"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
